Adding JavaFX build plugin to pom.xml

--- a/WalletExplorerDatasetUtility/pom.xml
+++ b/WalletExplorerDatasetUtility/pom.xml
@@ -82,6 +82,14 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.zenjava</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>8.8.3</version>
+				<configuration>
+					<mainClass>net.stevenuray.walletexplorer.executables.CategoryReviewer</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
